interfaces: extended contracts with specialized implementations

--- a/Blog/2021-02-Interfaces/CommunicationModule/CommunicationModule.TCP/CommunicationModule.TCP.csproj
+++ b/Blog/2021-02-Interfaces/CommunicationModule/CommunicationModule.TCP/CommunicationModule.TCP.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CommunicationModule.Contracts\CommunicationModule.Contracts.csproj" />
+    <ProjectReference Include="..\CommunicationModule.Network.Contracts\CommunicationModule.Network.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
