--- a/Blog/2021-02-Factories/AnimalFarm/AnimalFarm.Demo/AnimalFarm.Demo.csproj
+++ b/Blog/2021-02-Factories/AnimalFarm/AnimalFarm.Demo/AnimalFarm.Demo.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AnimalFarm\AnimalFarm.csproj" />
+    <ProjectReference Include="..\AnimalFarm.Birds\AnimalFarm.Birds.csproj" />
   </ItemGroup>
 
 </Project>
