factories: insert abstraction layer

--- a/Blog/2021-02-Factories/AnimalFarm/AnimalFarm/AnimalFarm.csproj
+++ b/Blog/2021-02-Factories/AnimalFarm/AnimalFarm/AnimalFarm.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AnimalFarm\AnimalFarm.csproj" />
+    <ProjectReference Include="..\AnimalFarm.Contracts\AnimalFarm.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
