--- a/Blog/2021-02-Factories/AnimalFarm/AnimalFarm.Demo/AnimalFarm.Demo.csproj
+++ b/Blog/2021-02-Factories/AnimalFarm/AnimalFarm.Demo/AnimalFarm.Demo.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AnimalFarm.Birds\AnimalFarm.Birds.csproj" />
+    <ProjectReference Include="..\AnimalFarm.Dinosaurs\AnimalFarm.Dinosaurs.csproj" />
   </ItemGroup>
 
 </Project>
